--- a/dashboard/template/test.html
+++ b/dashboard/template/test.html
@@ -1,70 +1,156 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <link href="../static/css/nv.d3.css" rel="stylesheet" type="text/css">
-    <script src="../static/js/d3.js" charset="utf-8"></script>
-    <script src="../static/js/nv.d3.js"></script>
 
-    <style>
-        text {
-            font: 12px sans-serif;
-        }
-        svg {
-            display: block;
-        }
-        html, body, svg {
-            margin: 0px;
-            padding: 0px;
-            height: 100%;
-            width: 100%;
-        }
-    </style>
+<!DOCTYPE html>
+
+<html lang="en">
+<head>
+  <title>Ipython Dashboard</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="../static/js/jquery-2.1.4.js"></script>
+  <script src="../static/js/bootstrap.js"></script>
+  <script src="../static/js/dash.js"></script>
+  <script src="../static/js/d3.js"></script>
+  <script src="../static/js/nv.d3.js"></script>
+  <script src="../static/js/dash.vis.js"></script>
+  <script src="../static/js/jquery-watch.js"></script>
+  <script src="../static/js/lodash.js"></script>
+  <script src="../static/js/jquery-ui.js"></script>
+  <script src="../static/js/gridstack.js"></script>
+
+  <link rel="stylesheet" href="../static/css/bootstrap.css">
+  <link rel="stylesheet" href="../static/css/bootstrap-vertical-menu.css">
+  <link rel="stylesheet" href="../static/css/font-awesome.css">
+  <link rel="stylesheet" href="../static/css/default.css">
+  <link rel="stylesheet" href="../static/css/normalize.css">
+  <link rel="stylesheet" href="../static/css/nv.d3.css">
+  <link rel="stylesheet" href="../static/css/dash.css">
+  <link rel="stylesheet" href="../static/css/gridstack.css">
+
+
+  <style type="text/css">
+    .grid-stack {
+      background: lightgoldenrodyellow;
+    }
+    .grid-stack-item-content {
+      color: #2c3e50;
+      text-align: center;
+      background-color: #18bc9c;
+    }
+  </style>
+
 </head>
+
 <body>
 
-<svg id="test1"></svg>
+  <div class="container container-box">
+    <div class="main clearfix">
 
-<script>
-    var chart;
-    nv.addGraph({
-        generate: function() {
-            var width = nv.utils.windowSize().width - 40,
-                height = nv.utils.windowSize().height - 40;
+      <!-- navigate side bar -->
+      <nav id="nav" class="navbar navbar-vertical-left" onmousemove="resize_content(1)" onmouseout="resize_content(2)">
+        <ul class="nav navbar-nav" style="height: 250px;">
+          <li><a href=""></a></li>
+          <li>
+            <a href="">
+              <i class="fa fa-fw fa-lg fa-television"></i> 
+              <span>Home</span>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <i class="fa fa-fw fa-lg fa-tachometer"></i> 
+              <span>Boards</span>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <i class="fa fa-fw fa-lg fa-cog"></i> 
+              <span>SQL</span>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <i class="fa fa-fw fa-lg fa-question-circle"></i> 
+              <span>Help</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
 
-            var chart = nv.models.lineChart()
-                .width(width)
-                .height(height)
-                .margin({top: 20, right: 20, bottom: 20, left: 20});
+      <!-- main content container -->
+      <div id="main-content" class="htmleaf-container">
 
-            chart.dispatch.on('renderEnd', function(){
-                console.log('render complete');
-            });
+        <!-- dashboard name -->
+        <header class="htmleaf-header">
+          <textarea id="dashboard_name" class="form-control input-lg input-title-level-1" maxlength="64" placeholder="Building and Sharing IPython Dashboard"></textarea>
+        </header>
 
-            d3.select('#test1')
-                .attr('width', width)
-                .attr('height', height)
-                .datum(sinAndCos())
-                .call(chart);
+        <!-- dashboard content -->
+        <div class="htmleaf-content bgcolor-8" style="padding-left: 0px; padding-right: 0px; padding: 0px; background-color: white;">
+          <div style="padding-bottom: 0px">
+            <button type="button" class="btn btn-primary" onclick="add_box()"><i class="fa fa-fw fa-
+              lg fa-plus"></i>Add</button>
+              <button type="button" class="btn btn-success" onclick="build_graph()"><i class="fa fa-fw fa-lg fa-share-alt"></i>Share</button>
+              <button type="button" class="btn btn-success" onclick="update_graph()"><i class="fa fa-spin fa-circle-o-notch"></i> Update</button>
+            </div>
 
-            return chart;
-        },
+            <div id="box-container" class="gridster parent-box">
+              <div class="grid-stack">
+                  <div class="grid-stack-item" data-gs-x="0" data-gs-y="0" data-gs-width="4" data-gs-height="6">
+                  <div class="grid-stack-item-content">
+                    <div class="chart-wrapper">
+                      <div class="chart-title bold">
+                        <table class="table input-title-level-2">
+                          <tr class="active" style="padding-left: 10%;">
+                            <td style="padding: 0px; width: 90%; padding-left: inherit"><input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Naming your graph"></td>
+                            <td style="padding: 0px; width: 10%"><button class="btn btn-primary edit-button" data-toggle="modal" data-target="#myModal"><i class="fa fa-fw fa-lg fa-edit" style="color: black;" onclick="addClassMark(this)"></i></button></td>
+                          </tr>
+                        </table>    
+                      </div>
+                      <div id="test_graph" class="chart-graph" style="width: 100%; overflow: auto; color: #444;">
+                      </div>
+                    </div> 
+                  </div>
+                </div> 
+                <div class="grid-stack-item" data-gs-x="1" data-gs-y="0" data-gs-width="4" data-gs-height="6">
+                  <div class="grid-stack-item-content">
+                    <div class="chart-wrapper">
+                      <div class="chart-title bold">
+                        <table class="table input-title-level-2">
+                          <tr class="active" style="padding-left: 10%;">
+                            <td style="padding: 0px; width: 90%; padding-left: inherit"><input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Naming your graph"></td>
+                            <td style="padding: 0px; width: 10%"><button class="btn btn-primary edit-button" data-toggle="modal" data-target="#myModal"><i class="fa fa-fw fa-lg fa-edit" style="color: black;" onclick="addClassMark(this)"></i></button></td>
+                          </tr>
+                        </table>    
+                      </div>
+                      <div id="test_graph" class="chart-graph" style="width: 100%; overflow: auto; color: #444;">
+                      </div>
+                    </div> 
+                  </div>
+                </div>  
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <script type="text/javascript">
+      $(function () {
+        var options = {
+          cell_height: 50,
+          width: 12,
+          min_width: 4,
+          float: true,
+          animate: true, 
+          vertical_margin: 0,
+          resizable: {handles: "e, se, s, sw, w"}
+      };
+      a = $('.grid-stack').gridstack(options);
     });
+    </script>
 
-    function sinAndCos() {
-        var sin = [];
-        for (var i = 0; i < 100; i++) {
-            sin.push({x: i, y: Math.sin(i/10)});
-        }
+  </script>
 
-        return [
-            {
-                values: sin,
-                key: "Sine Wave",
-            },
-        ];
-    }
-
-</script>
 </body>
 </html>
