ok, finnaly I decide to replace gridster with gridstack thanks a lot, gridster, I still love you but gridstack is more sexy and hot, sorry my girl

--- a/dashboard/template/dashboard.html
+++ b/dashboard/template/dashboard.html
@@ -18,6 +18,7 @@
 
   <link rel="stylesheet" href="../static/css/bootstrap.css">
   <link rel="stylesheet" href="../static/css/jquery.gridster.css">
+  <link rel="shortcut icon" href="../static/img/favicon.ico" type="image/x-icon">
   <!-- <link rel="stylesheet" href="../static/css/gridstack.css"> -->
   <link rel="stylesheet" href="../static/css/bootstrap-vertical-menu.css">
   <link rel="stylesheet" href="../static/css/font-awesome.css">
