--- a/dashboard/static/css/dash.css
+++ b/dashboard/static/css/dash.css
@@ -12,14 +12,14 @@ ul {
 }
 
 body {
-    font-size: 16px;
-    font-family: 'Helvetica Neue', Arial, sans-serif;
-    color: #444;
-    margin: 30px 40px;
+  font-size: 16px;
+  font-family: 'Helvetica Neue', Arial, sans-serif;
+  color: #444;
+  margin: 30px 40px;
 }
 
 .controls {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 /*/
@@ -27,44 +27,44 @@ body {
 /*/
 
 .gridster ul {
-    background-color: #EFEFEF;
+  background-color: #EFEFEF;
 }
 
 .gridster li {
-    font-size: 1em;
-    font-weight: bold;
-    text-align: center;
-    line-height: 100%;
+  font-size: 1em;
+  font-weight: bold;
+  text-align: center;
+  line-height: 100%;
 }
 
 
 .gridster {
-    opacity: .8;
+  opacity: .8;
 
-    -webkit-transition: opacity .6s;
-    -moz-transition: opacity .6s;
-    -o-transition: opacity .6s;
-    -ms-transition: opacity .6s;
-    transition: opacity .6s;
+  -webkit-transition: opacity .6s;
+  -moz-transition: opacity .6s;
+  -o-transition: opacity .6s;
+  -ms-transition: opacity .6s;
+  transition: opacity .6s;
 }
 
 .gridster .gs-w {
-    background: #DDD;
-    cursor: pointer;
+  background: #DDD;
+  cursor: pointer;
 }
 
 .gridster .player {
-    background: #BBB;
+  background: #BBB;
 }
 
 
 .gridster .preview-holder {
-    border: none!important;
-    background: red!important;
+  border: none!important;
+  background: red!important;
 }
 
 .parent-box {
-    /*margin: 10px;*/
+  /*margin: 10px;*/
 }
 
 .navbar-vertical-left {
@@ -88,21 +88,21 @@ body {
     height: auto;
     width: 100%;
   }
- 
+  
   .navbar-vertical-left,
   .navbar-vertical-left ul.navbar-nav {
     -webkit-transition: none;
-       -moz-transition: none;
-            transition: none;
+    -moz-transition: none;
+    transition: none;
     -webkit-transform: none;
-       -moz-transform: none;
-            transform: none;
+    -moz-transform: none;
+    transform: none;
   }
- 
+  
   .navbar-vertical-left ul.navbar-nav > li {
     display: table-cell;
   }
- 
+  
   .navbar-vertical-left ul.navbar-nav > li > a {
     display: inline-block;
     width: 100%;
@@ -110,55 +110,55 @@ body {
     height: 50px;
     line-height: 30px;
   }
- 
+  
   .navbar-vertical-left ul.navbar-nav > li > a > i.fa {
     margin: 0;
   }
- 
+  
   .navbar-vertical-left ul.navbar-nav > li > a > span {
     display: none;
   }
 }
 
 .input-title-level-1 {
-    background-color: inherit; 
-    text-align: center; 
-    font-size: xx-large; 
-    height: 30px; 
-    border: none;
-    resize: none;
-    padding: 0px 0px;
+  background-color: inherit; 
+  text-align: center; 
+  font-size: xx-large; 
+  height: 30px; 
+  border: none;
+  resize: none;
+  padding: 0px 0px;
 }
 
 .input-title-level-2 {
-    background-color: inherit; 
-    text-align: center; 
-    font-size: large; 
-    height: 30px; 
-    border: none;
-    resize: none;
-    padding: 0px 0px;
-    margin-bottom: 0px;
-    padding-left: 10%;
+  background-color: inherit; 
+  text-align: center; 
+  font-size: large; 
+  height: 30px; 
+  border: none;
+  resize: none;
+  padding: 0px 0px;
+  margin-bottom: 0px;
+  padding-left: 10%;
 }
 
 .edit-button {
-    text-align: center; 
-    font-size: large; 
-    height: 30px; 
-    border: none;
-    resize: none;
-    padding: 0px 0px;
-    width: 40px;
-    background-color: inherit;
+  text-align: center; 
+  font-size: large; 
+  height: 30px; 
+  border: none;
+  resize: none;
+  padding: 0px 0px;
+  width: 40px;
+  background-color: inherit;
 }
 
 .edit-button:hover {
-    background-color: inherit;
+  background-color: inherit;
 }
 
 .edit-button:focus {
-    background-color: inherit;
+  background-color: inherit;
 }
 
 .chart-wrapper {
@@ -182,16 +182,16 @@ body {
 }
 
 .container-box {
-    width: inherit;
-    padding-right: 0px;
-    padding-left: 60px;
+  width: inherit;
+  padding-right: 0px;
+  padding-left: 60px;
 }
 
 .box-ul {
-    width: inherit;
-    padding-left: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
+  width: inherit;
+  padding-left: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
 }
 
 .box-li {
@@ -200,8 +200,15 @@ body {
 .edit-graph {
 }
 
+.grid-stack {
+  background: #f9f7ee;
+}
 .grid-stack-item-content {
-    left: 0px;
-    right: 0px;
+  left: 0px;
+  right: 0px;
+  color: white;
+  text-align: center;
+  background-color: white;
+  top: 10px;
 }
 
