--- a/dashboard/static/css/gridstack.css
+++ b/dashboard/static/css/gridstack.css
@@ -25,8 +25,11 @@
   margin: 0;
   position: absolute;
   top: 0;
-  left: 10px;
-  right: 10px;
+  /*left: 10px;*/
+  /*right: 10px;*/
+  /*by litaotao Oct.13th*/
+  left: 3px;
+  right: 3px;
   bottom: 0;
   width: auto;
   z-index: 0 !important;
