--- a/dashboard/template/test.html
+++ b/dashboard/template/test.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 
 <html lang="en">
@@ -17,6 +16,8 @@
   <script src="../static/js/jquery-ui.js"></script>
   <script src="../static/js/gridstack.js"></script>
 
+  <link rel="shortcut icon" href="../static/img/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="../static/img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="../static/css/bootstrap.css">
   <link rel="stylesheet" href="../static/css/bootstrap-vertical-menu.css">
   <link rel="stylesheet" href="../static/css/font-awesome.css">
@@ -26,138 +27,152 @@
   <link rel="stylesheet" href="../static/css/dash.css">
   <link rel="stylesheet" href="../static/css/gridstack.css">
 
-
-  <style type="text/css">
-    .grid-stack {
-      background: #f9f7ee;
-    }
-    .grid-stack-item-content {
-      color: white;
-      text-align: center;
-      background-color: white;
-      top: 10px;
-    }
-  </style>
-
 </head>
 
 <body>
 
-  <div class="container container-box">
-    <div class="main clearfix">
+<div class="container container-box">
+  <div class="main clearfix">
 
-      <!-- navigate side bar -->
-      <nav id="nav" class="navbar navbar-vertical-left" onmousemove="resize_content(1)" onmouseout="resize_content(2)">
-        <ul class="nav navbar-nav" style="height: 250px;">
-          <li><a href=""></a></li>
-          <li>
-            <a href="">
-              <i class="fa fa-fw fa-lg fa-television"></i> 
-              <span>Home</span>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <i class="fa fa-fw fa-lg fa-tachometer"></i> 
-              <span>Boards</span>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <i class="fa fa-fw fa-lg fa-cog"></i> 
-              <span>SQL</span>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <i class="fa fa-fw fa-lg fa-question-circle"></i> 
-              <span>Help</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
+    <!-- navigate side bar -->
+    <nav id="nav" class="navbar navbar-vertical-left" onmousemove="resize_content(1)" onmouseout="resize_content(2)">
+      <ul class="nav navbar-nav" style="height: 250px;">
+        <li><a href=""></a></li>
+        <li>
+          <a href="">
+            <i class="fa fa-fw fa-lg fa-television"></i> 
+            <span>Home</span>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <i class="fa fa-fw fa-lg fa-tachometer"></i> 
+            <span>Boards</span>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <i class="fa fa-fw fa-lg fa-cog"></i> 
+            <span>SQL</span>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <i class="fa fa-fw fa-lg fa-question-circle"></i> 
+            <span>Help</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
 
-      <!-- main content container -->
-      <div id="main-content" class="htmleaf-container">
+    <!-- main content container -->
+    <div id="main-content" class="htmleaf-container">
 
-        <!-- dashboard name -->
-        <header class="htmleaf-header">
-          <textarea id="dashboard_name" class="form-control input-lg input-title-level-1" maxlength="64" placeholder="Building and Sharing IPython Dashboard"></textarea>
-        </header>
+      <!-- dashboard name -->
+      <header class="htmleaf-header">
+        <textarea id="dashboard_name" class="form-control input-lg input-title-level-1" maxlength="64" placeholder="Building and Sharing IPython Dashboard"></textarea>
+      </header>
 
-        <!-- dashboard content -->
-        <div class="htmleaf-content bgcolor-8" style="padding-left: 0px; padding-right: 0px; padding: 0px; background-color: white;">
-          <div style="padding-bottom: 5px; background-color: gray">
-            <button type="button" class="btn btn-primary" onclick="add_box()"><i class="fa fa-fw fa-
-              lg fa-plus"></i>Add</button>
-              <button type="button" class="btn btn-success" onclick="build_graph()"><i class="fa fa-fw fa-lg fa-share-alt"></i>Share</button>
-              <button type="button" class="btn btn-success" onclick="update_graph()"><i class="fa fa-spin fa-circle-o-notch"></i> Update</button>
-            </div>
+      <!-- dashboard content -->
+      <div class="htmleaf-content bgcolor-8" style="padding-left: 0px; padding-right: 0px; padding: 0px; background-color: white;">
+        <div style="padding-bottom: 5px; background-color: gray">
+          <button type="button" class="btn btn-primary" onclick="add_box()"><i class="fa fa-fw fa-
+            lg fa-plus"></i>Add</button>
+            <button type="button" class="btn btn-success" onclick="build_graph()"><i class="fa fa-fw fa-lg fa-share-alt"></i>Share</button>
+            <button type="button" class="btn btn-success" onclick="update_graph()"><i class="fa fa-spin fa-circle-o-notch"></i> Update</button>
+        </div>
 
-            <div id="box-container" class="parent-box">
-              <div class="grid-stack">
-              <!--    <div class="grid-stack-item" data-gs-x="0" data-gs-y="0" data-gs-width="4" data-gs-height="6" data-gs-min-height="4">
-                  <div class="grid-stack-item-content" style="left: 0px; right: 0px">
-                    <div class="chart-wrapper">
-                      <div class="chart-title bold">
-                        <table class="table input-title-level-2">
-                          <tr class="active" style="padding-left: 10%;">
-                            <td style="padding: 0px; width: 90%; padding-left: inherit"><input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Naming your graph"></td>
-                            <td style="padding: 0px; width: 10%"><button class="btn btn-primary edit-button" data-toggle="modal" data-target="#myModal"><i class="fa fa-fw fa-lg fa-edit" style="color: black;" onclick="addClassMark(this)"></i></button></td>
-                          </tr>
-                        </table>    
-                      </div>
-                      <div id="test_graph" class="chart-graph" style="width: 100%; overflow: auto; color: #444;">
-                      </div>
-                    </div> 
-                  </div>
-                </div> 
-                <div class="grid-stack-item" data-gs-x="1" data-gs-y="0" data-gs-width="4" data-gs-height="6">
-                  <div class="grid-stack-item-content" style="left: 0px; right: 0px">
-                    <div class="chart-wrapper">
-                      <div class="chart-title bold">
-                        <table class="table input-title-level-2">
-                          <tr class="active" style="padding-left: 10%;">
-                            <td style="padding: 0px; width: 90%; padding-left: inherit"><input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Naming your graph"></td>
-                            <td style="padding: 0px; width: 10%"><button class="btn btn-primary edit-button" data-toggle="modal" data-target="#myModal"><i class="fa fa-fw fa-lg fa-edit" style="color: black;" onclick="addClassMark(this)"></i></button></td>
-                          </tr>
-                        </table>    
-                      </div>
-                      <div id="test_graph" class="chart-graph" style="width: 100%; overflow: auto; color: #444;">
-                      </div>
-                    </div> 
-                  </div>
-                </div>  --> 
-              </div>
-            </div>
+        <div id="box-container" class="parent-box">
+          <div class="grid-stack">
           </div>
         </div>
       </div>
     </div>
+  </div>
+</div>
 
+<!-- Editor Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" 
+aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal-dialog" style="width: 80%; height: 40%;">
+  <div class="modal-content">
+   <div class="modal-header" style="padding: 5px;">
+    <button type="button" class="close btn-sm" data-dismiss="modal" aria-hidden="true">
+      <i class="fa fa-fw fa-lg fa-close"></i>
+    </button>
+    <h5 class="modal-title" id="myModalLabel">Edit your dash graph</h5>
+  </div>
+  <div class="modal-body">
+    <div>
+      <table class="table input-title-level-2">
+        <tr class="active">
+          <td style="padding: 0px; width: 20%; border: none">
+            <select id="keys" class="form-control" style="border: none">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+            </select>
+          </td>
+          <td style="padding: 0px; width: 75%; background-color: white;border: none;"><input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Define your graph" style="padding-left: 0px"></td>
+          <td style="padding: 0px; width: 5%; background-color: inherit; border: none;"><button class="btn btn-primary edit-button"><i class="fa fa-fw fa-lg fa-refresh" style="color: black;"></i></button></td>
+        </tr>
+      </table> 
+    </div>
+    <hr style="margin: 5px 0px; color: green;">
+    <div id="value" style="width: 100%; height: 500px; overflow-x:auto; overflow-y:auto;">
+
+    </div>
+  </div>
+  <div class="modal-footer" style="padding: 5px;">
+    <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">cancel</button>
+    <button type="button" class="btn btn-primary btn-sm" data-dismiss="modal" onclick="saveGraph()">save</button>
+  </div>
+</div><!-- /.modal-content -->
+</div><!-- /.modal -->
+</div>
 
 <script type="text/javascript">
   $(function () {
     var options = {
-      cell_height: 50,
       width: 12,
-      min_width: 4,
-      float: true,
       animate: true, 
       vertical_margin: 5,
       resizable: {handles: "e, se, s, sw, w"}
     };
     $('.grid-stack').gridstack(options);
   });
-// set min width and min height of each grid cell
-// $(".grid-stack-item").attr("data-gs-min-width", 4).attr("data-gs-min-height", 6);
 
 $(document).ready(function(){
      grid = $('.grid-stack').data('gridstack');
-     box = '<div><div class="grid-stack-item-content" data-gs-min-height="4" data-gs-min-width="4"></div>';
+     box = '<div data-gs-min-height="4" data-gs-min-width="6">   \
+              <div class="grid-stack-item-content">              \
+                <div class="chart-wrapper">                      \
+                  <div class="chart-title bold">                 \
+                    <table class="table input-title-level-2">    \
+                      <tr class="active" style="padding-left: 10%;">   \
+                        <td style="padding: 0px; width: 90%; padding-left: inherit">   \
+                          <input class="form-control input-lg input-title-level-2" maxlength="32" placeholder="Naming your graph">  \
+                        </td>                                                                                                       \
+                        <td style="padding: 0px; width: 10%">                                                                       \
+                          <button class="btn btn-primary edit-button" data-toggle="modal" data-target="#myModal">                   \
+                            <i class="fa fa-fw fa-lg fa-edit" style="color: black;" onclick="addClassMark(this)"></i></button>      \
+                        </td>   \
+                      </tr>     \
+                    </table>    \
+                  </div>        \
+                  <div id="test_graph" class="chart-graph" style="width: 100%; overflow: auto; color: #444;">   \
+                  </div>        \
+                </div>          \
+              </div>   \
+            </div>';
+    // initialized four boxes
+    grid.add_widget(box, 0, 0, 6, 4)
+    grid.add_widget(box, 6, 0, 6, 4);
+    grid.add_widget(box, 0, 1, 6, 4)
+    grid.add_widget(box, 6, 1, 6, 4);
 })
-
-
 </script>
 
 </body>
