--- a/dashboard/static/css/gridstack.css
+++ b/dashboard/static/css/gridstack.css
@@ -25,11 +25,12 @@
   margin: 0;
   position: absolute;
   top: 0;
+  /*by litaotao Oct.13th*/
   /*left: 10px;*/
   /*right: 10px;*/
-  /*by litaotao Oct.13th*/
   left: 3px;
   right: 3px;
+  /*by litaotao Oct.13th*/
   bottom: 0;
   width: auto;
   z-index: 0 !important;
@@ -62,7 +63,9 @@
   padding: 2px 3px 0 0;
   margin: 0;
   font: normal normal normal 10px/1 FontAwesome;
-  font-size: inherit;
+  /*by litaotao on Oct.13th*/
+  /*font-size: inherit;*/
+  /*by litaotao Oct.13th*/
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
