--- a/dashboard/template/dashboard.html
+++ b/dashboard/template/dashboard.html
@@ -202,7 +202,7 @@ aria-labelledby="myModalLabel" aria-hidden="true">
       widget_margins: [2, 2],
       min_cols: 1,
       max_cols: 2,
-      helper: 'clone',
+      // helper: 'clone',
       resize: {
         enabled: true
       }
