gridstack looks good, let move on to server and client interact

--- a/dashboard/static/css/dash.css
+++ b/dashboard/static/css/dash.css
@@ -165,8 +165,9 @@ body {
   background: #fff;
   border: 1px solid #e2e2e2;
   border-radius: 3px;
-  margin-bottom: 10px;
-  height: inherit;
+  /*margin-bottom: 10px;*/
+  /*height: inherit;*/
+  height: 100%;
 }
 
 .chart-title {
