--- a/dashboard/template/test.html
+++ b/dashboard/template/test.html
@@ -63,8 +63,9 @@
         <div style="padding-bottom: 5px; background-color: gray">
           <button type="button" class="btn btn-primary" onclick="add_box()"><i class="fa fa-fw fa-
             lg fa-plus"></i>Add</button>
-          <button type="button" class="btn btn-success" onclick="build_graph()"><i class="fa fa-fw fa-lg fa-share-alt"></i>Share</button>
-          <button type="button" class="btn btn-success" onclick="update_graph()"><i class="fa fa-spin fa-circle-o-notch"></i> Update</button>
+          <button type="button" class="btn btn-success" onclick="build_graph()"><i class="fa fa-fw fa-lg fa-share-alt"></i> DemoGraph</button>
+          <button type="button" class="btn btn-error" onclick="update_graph()"><i class="fa fa-spin fa-circle-o-notch"></i> update</button>
+          <button type="button" class="btn btn-info" onclick="alert('save')"><i class="fa fa-fw fa-lg fa-floppy-o"></i> Save</button>
         </div>
         <div id="box-container" class="parent-box">
           <div class="grid-stack"></div>
