move on server on-going, everything goes as planned, thanks flask, making web dev so easy

--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -39,12 +39,12 @@
     <nav id="nav" class="navbar navbar-vertical-left" onmousemove="resizeContent(1)" onmouseout="resizeContent(2)">
       <ul class="nav navbar-nav" style="height: 250px;">
         <li><a href=""></a></li>
-        <li><a href="">
+        <li><a href="/home">
             <i class="fa fa-fw fa-lg fa-television"></i><span>Home</span></a></li>
         <li><a href="">
             <i class="fa fa-fw fa-lg fa-tachometer"></i><span>Boards</span></a></li>
         <li><a href="">
-            <i class="fa fa-fw fa-lg fa-cog"></i><span>SQL</span></a></li>
+            <i class="fa fa-fw fa-lg fa-database"></i><span>SQL</span></a></li>
         <li><a href="">
             <i class="fa fa-fw fa-lg fa-question-circle"></i><span>Help</span></a></li>
       </ul>
