almost complete dash restapi, start build dashes list page then the mvp for dashboards can be finished and then I'll move to sql runner editor

--- a/dashboard/static/css/dash.css
+++ b/dashboard/static/css/dash.css
@@ -139,7 +139,7 @@ body {
   resize: none;
   padding: 0px 0px;
   margin-bottom: 0px;
-  padding-left: 10%;
+  /*padding-left: 10%;*/
 }
 
 .edit-button {
