add chart select button and x-axis and y-axis selection list

--- a/dashboard/templates/dashboard_list.html
+++ b/dashboard/templates/dashboard_list.html
@@ -51,7 +51,7 @@
       </ul>
     </nav>
 
-          <!-- main content container -->
+    <!-- main content container -->
     <div id="main-content" class="htmleaf-container">
       <div class="table-responsive">
         <table id="my" class="table table-hover" data-toggle="table">
@@ -72,7 +72,7 @@
 </div>
 
 <script type="text/javascript">
-    initDashList()
+    initDashList();
     $(document).ready(function(){
         $(function(){
         $("#my").tablesorter({ sortList: [[2, 1]] });
