restructure some js code

--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -103,7 +103,7 @@
                  </div>
               </td>
               <td style="padding: 0px; width: 5%; background-color: inherit; border: none;"><button type="button" class="btn btn-default btn-sm" data-dismiss="modal"><i class="fa fa-fw fa-lg fa-close" style="color: black;"></i></button></td>
-              <td style="padding: 0px; width: 5%; background-color: inherit; border: none;"><button type="button" class="btn btn-primary btn-sm" data-dismiss="modal" onclick="saveGraph_v2()"><i class="fa fa-fw fa-lg fa-check" style="color: black;"></i></button></td>
+              <td style="padding: 0px; width: 5%; background-color: inherit; border: none;"><button type="button" class="btn btn-primary btn-sm" data-dismiss="modal" onclick="saveGraph()"><i class="fa fa-fw fa-lg fa-check" style="color: black;"></i></button></td>
             </tr>
             </tbody>
           </table> 
@@ -134,8 +134,6 @@ $('.btn-chart').click(function(e) {
     $(".btn-chart").removeClass("active");
     $(this).addClass("active");
 })
-
-
 </script>
 
 
