--- a/dashboard/templates/dashboard_list.html
+++ b/dashboard/templates/dashboard_list.html
@@ -7,29 +7,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="dash_id" value={{dash_id}}>
   <script src="../static/js/jquery-2.1.4.js"></script>
-  <script src="../static/js/bootstrap.js"></script>
-  <script src="../static/js/dash.js"></script>
-  <script src="../static/js/d3.js"></script>
-  <script src="../static/js/nv.d3.js"></script>
-  <script src="../static/js/dash.vis.js"></script>
-  <script src="../static/js/jquery-watch.js"></script>
-  <script src="../static/js/lodash.js"></script>
-  <script src="../static/js/jquery-ui.js"></script>
-  <script src="../static/js/gridstack.js"></script>
-  <script src="../static/js/moment.js"></script>
-  <script src="../static/js/jquery.tablesorter.js"></script>
+  <script src="../static/js/bootstrap-3.3.5.js"></script>
+  <script src="../static/js/dash-0.1.0.js"></script>
+  <script src="../static/js/d3-3.5.6.js"></script>
+  <script src="../static/js/nv.d3-1.7.1.js"></script>
+  <script src="../static/js/dash.vis-0.1.0.js"></script>
+  <script src="../static/js/jquery-watch-1.16.js"></script>
+  <script src="../static/js/lodash-3.10.1.js"></script>
+  <script src="../static/js/jquery-ui-1.11.4.js"></script>
+  <script src="../static/js/gridstack-0.2.4.js"></script>
+  <script src="../static/js/moment-2.10.6.js"></script>
+  <script src="../static/js/jquery.tablesorter-2.23.5.js"></script>
 
   <link rel="shortcut icon" href="../static/img/favicon.ico" type="image/x-icon">
   <link rel="icon" href="../static/img/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="../static/css/bootstrap.css">
+  <link rel="stylesheet" href="../static/css/bootstrap-3.3.5.css">
   <link rel="stylesheet" href="../static/css/bootstrap-vertical-menu.css">
-  <link rel="stylesheet" href="../static/css/font-awesome.css">
+  <link rel="stylesheet" href="../static/css/font-awesome-4.4.0.css">
   <link rel="stylesheet" href="../static/css/default.css">
   <link rel="stylesheet" href="../static/css/normalize.css">
   <link rel="stylesheet" href="../static/css/nv.d3.css">
-  <link rel="stylesheet" href="../static/css/dash.css">
+  <link rel="stylesheet" href="../static/css/dash-0.1.0.css">
   <link rel="stylesheet" href="../static/css/gridstack.css">
-
 </head>
 
 <body style="background: white;"> 
