--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -10,7 +10,7 @@
   <script src="../static/js/bootstrap-3.3.5.min.js"></script>
   <script src="../static/js/dash-0.1.0.js"></script>
   <script src="../static/js/d3-3.5.6.js"></script>
-  <script src="../static/js/nv.d3-1.7.1.js"></script>
+  <script src="../static/js/nv.d3-1.8.1.js"></script>
   <script src="../static/js/dash.vis-0.1.0.js"></script>
   <script src="../static/js/jquery-watch-1.16.js"></script>
   <script src="../static/js/lodash-3.10.1.min.js"></script>
@@ -18,6 +18,7 @@
   <script src="../static/js/gridstack-0.2.4.min.js"></script>
   <script src="../static/js/moment-2.10.6.min.js"></script>
   <script src="../static/js/jquery.tablesorter-2.23.5.min.js"></script>
+  <script src="../static/js/stream_layers.js"></script>
 
   <link rel="shortcut icon" href="../static/img/favicon.ico" type="image/x-icon">
   <link rel="icon" href="../static/img/favicon.ico" type="image/x-icon">
