add github link

--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -48,6 +48,8 @@
             <i class="fa fa-fw fa-lg fa-database"></i><span>SQL</span></a></li>
         <li><a href="">
             <i class="fa fa-fw fa-lg fa-question-circle"></i><span>Help</span></a></li>
+        <li><a href="https://github.com/litaotao/IPython-Dashboard">
+            <i class="fa fa-fw fa-lg fa-github"></i><span>Github</span></a></li>
       </ul>
     </nav>
 
