--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -48,7 +48,7 @@
             <i class="fa fa-fw fa-lg fa-database"></i><span>SQL</span></a></li>
         <li><a href="">
             <i class="fa fa-fw fa-lg fa-question-circle"></i><span>Help</span></a></li>
-        <li><a href="https://github.com/litaotao/IPython-Dashboard">
+        <li><a href="https://github.com/litaotao/IPython-Dashboard" target="_blank">
             <i class="fa fa-fw fa-lg fa-github"></i><span>Github</span></a></li>
       </ul>
     </nav>
@@ -109,7 +109,7 @@
               <td style="padding: 0px; width: 5%; background-color: inherit; border: none;"><button type="button" class="btn btn-primary btn-sm" data-dismiss="modal" onclick="saveGraph()"><i class="fa fa-fw fa-lg fa-check" style="color: black;"></i></button></td>
             </tr>
             </tbody>
-          </table> 
+          </table>
         </div>
         <hr style="margin: 5px 0px; color: green;">
         <div id="value" style="width: 100%; height: 500px; overflow-x:auto; overflow-y:auto;">
