--- a/dashboard/templates/dashboard_list.html
+++ b/dashboard/templates/dashboard_list.html
@@ -9,9 +9,9 @@
   <script src="../static/js/bootstrap-3.3.5.min.js"></script>
   <script src="../static/js/dash-0.1.0.js"></script>
   <script src="../static/js/d3-3.5.6.min.js"></script>
-  <script src="../static/js/nv.d3-1.7.1.min.js"></script>
+  <script src="../static/js/nv.d3-1.7.1.js"></script>
   <script src="../static/js/dash.vis-0.1.0.js"></script>
-  <script src="../static/js/jquery-watch-1.16.min.js"></script>
+  <script src="../static/js/jquery-watch-1.16.js"></script>
   <script src="../static/js/lodash-3.10.1.min.js"></script>
   <script src="../static/js/jquery-ui-1.11.4.min.js"></script>
   <script src="../static/js/gridstack-0.2.4.min.js"></script>
@@ -30,7 +30,7 @@
   <link rel="stylesheet" href="../static/css/gridstack.css">
 </head>
 
-<body style="background: white;"> 
+<body style="background: white;">
 
   <!-- Main Content Area -->
 <div class="container container-box">
@@ -46,7 +46,7 @@
           <i class="fa fa-fw fa-lg fa-database"></i><span>SQL</span></a></li>
         <li><a href="">
             <i class="fa fa-fw fa-lg fa-question-circle"></i><span>Help</span></a></li>
-        <li><a href="https://github.com/litaotao/IPython-Dashboard">
+        <li><a href="https://github.com/litaotao/IPython-Dashboard" target="_blank">
             <i class="fa fa-fw fa-lg fa-github"></i><span>Github</span></a></li>
       </ul>
     </nav>
