add one test data and do some feature improving

--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -96,7 +96,7 @@
                 </select>
               </td>
               <td style="padding: 0px; width: 70%; background-color: white;border: none;">
-                  <div class="btn-group">
+                  <div class="btn-group" id="graph-type">
                       <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChart('table')"><i class="fa fa-fw fa-lg fa-table"></i></button>
                       <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChart('bar')"><i class="fa fa-fw fa-lg fa-bar-chart-o"></i></button>
                       <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChart('line')"><i class="fa fa-fw fa-lg fa-line-chart"></i></button>
