make excel-like table editable in gridstack box

--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -8,14 +8,14 @@
   <meta name="dash_id" value={{dash_id}}>
   <script src="../static/js/jquery-2.1.4.min.js"></script>
   <script src="../static/js/bootstrap-3.3.5.min.js"></script>
-  <script src="../static/js/dash-0.1.0.js"></script>
+  <script src="../static/js/dash-0.1.2.js"></script>
   <script src="../static/js/d3-3.5.6.js"></script>
   <script src="../static/js/nv.d3-1.8.1.js"></script>
-  <script src="../static/js/dash.vis-0.1.0.js"></script>
+  <script src="../static/js/dash.vis-0.1.2.js"></script>
   <script src="../static/js/jquery-watch-1.16.js"></script>
   <script src="../static/js/lodash-3.10.1.min.js"></script>
   <script src="../static/js/jquery-ui-1.11.4.min.js"></script>
-  <script src="../static/js/gridstack-0.2.4.min.js"></script>
+  <script src="../static/js/gridstack-0.2.4.js"></script>
   <script src="../static/js/moment-2.10.6.min.js"></script>
   <script src="../static/js/jquery.tablesorter-2.23.5.min.js"></script>
   <script src="../static/js/stream_layers.js"></script>
@@ -28,7 +28,7 @@
   <link rel="stylesheet" href="../static/css/default.css">
   <link rel="stylesheet" href="../static/css/normalize.css">
   <link rel="stylesheet" href="../static/css/nv.d3.css">
-  <link rel="stylesheet" href="../static/css/dash-0.1.0.css">
+  <link rel="stylesheet" href="../static/css/dash-0.1.2.css">
   <link rel="stylesheet" href="../static/css/gridstack.css">
 </head>
 
