start use store.js as a local storage to store data and interact with server side, hope to complete this tonight, hah~

--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -19,6 +19,7 @@
   <script src="../static/js/moment-2.10.6.min.js"></script>
   <script src="../static/js/jquery.tablesorter-2.23.5.min.js"></script>
   <script src="../static/js/stream_layers.js"></script>
+  <script src="../static/js/store.js"></script>
 
   <link rel="shortcut icon" href="../static/img/favicon.ico" type="image/x-icon">
   <link rel="icon" href="../static/img/favicon.ico" type="image/x-icon">
