--- a/dashboard/templates/dashboard_list.html
+++ b/dashboard/templates/dashboard_list.html
@@ -17,6 +17,7 @@
   <script src="../static/js/gridstack-0.2.4.min.js"></script>
   <script src="../static/js/moment-2.10.6.min.js"></script>
   <script src="../static/js/jquery.tablesorter-2.23.5.min.js"></script>
+  <script src="../static/js/store.js"></script>
 
   <link rel="shortcut icon" href="../static/img/favicon.ico" type="image/x-icon">
   <link rel="icon" href="../static/img/favicon.ico" type="image/x-icon">
