fix some bugs and refactor some code, will do some code cleaning before merging to master and release.

--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -98,15 +98,15 @@
               </td>
               <td style="padding: 0px; width: 70%; background-color: white;border: none;">
                   <div class="btn-group" id="graph-type">
-                      <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChart('table')"><i class="fa fa-fw fa-lg fa-table"></i></button>
-                      <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChart('bar')"><i class="fa fa-fw fa-lg fa-bar-chart-o"></i></button>
-                      <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChart('line')"><i class="fa fa-fw fa-lg fa-line-chart"></i></button>
-                      <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChart('pie')"><i class="fa fa-fw fa-lg fa-pie-chart"></i></button>
-                      <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChart('area')"><i class="fa fa-fw fa-lg fa-area-chart"></i></button>
+                      <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChartModal('table')"><i class="fa fa-fw fa-lg fa-table"></i></button>
+                      <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChartModal('bar')"><i class="fa fa-fw fa-lg fa-bar-chart-o"></i></button>
+                      <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChartModal('line')"><i class="fa fa-fw fa-lg fa-line-chart"></i></button>
+                      <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChartModal('pie')"><i class="fa fa-fw fa-lg fa-pie-chart"></i></button>
+                      <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChartModal('area')"><i class="fa fa-fw fa-lg fa-area-chart"></i></button>
                  </div>
               </td>
               <td style="padding: 0px; width: 5%; background-color: inherit; border: none;"><button type="button" class="btn btn-default btn-sm" data-dismiss="modal"><i class="fa fa-fw fa-lg fa-close" style="color: black;"></i></button></td>
-              <td style="padding: 0px; width: 5%; background-color: inherit; border: none;"><button type="button" class="btn btn-primary btn-sm" data-dismiss="modal" onclick="saveGraph()"><i class="fa fa-fw fa-lg fa-check" style="color: black;"></i></button></td>
+              <td style="padding: 0px; width: 5%; background-color: inherit; border: none;"><button type="button" class="btn btn-primary btn-sm" data-dismiss="modal" onclick="saveGraph_v2()"><i class="fa fa-fw fa-lg fa-check" style="color: black;"></i></button></td>
             </tr>
             </tbody>
           </table>
